{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerHuman",
            "id": "9f38a19a-9ff0-4aac-a089-a5cc8dedbed1",
            "actions": [
                {
                    "name": "JumpStart",
                    "type": "Button",
                    "id": "8c929325-7d25-4982-87f7-4ae38069caaa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JumpEnd",
                    "type": "Button",
                    "id": "b2e743f9-0fff-431c-9c01-fe3d4a186f2a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "ff7ca14b-56ab-4f4e-8504-e0e1062825fd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "SprintStart",
                    "type": "Button",
                    "id": "da7f6a79-f0f4-4057-929d-52cd96456aad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SprintEnd",
                    "type": "Button",
                    "id": "b8b75f2a-faac-46fb-a04e-c6ce471cae70",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CrouchStart",
                    "type": "Button",
                    "id": "dd11e6b8-ff6a-467f-9fab-12fb1c810647",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CrouchEnd",
                    "type": "Button",
                    "id": "6b284547-5c87-4979-89d5-678e3d33c62c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LightPunch",
                    "type": "Button",
                    "id": "9a17f8bb-a15f-4b29-acc9-30ff27dda7ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HeavyPunch",
                    "type": "Button",
                    "id": "a298b093-ad70-477e-b1af-5992dacdd897",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Kick",
                    "type": "Button",
                    "id": "1208cb74-8552-4fbf-a92c-fcae4276c885",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "21578e8f-f5c5-46a1-94e1-6b9f2db6784b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b2e71648-b59b-4992-9925-7f1817b93c72",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "JumpStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e639895-0787-424f-a5af-dae87bfe37b0",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "JumpStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "99b641d1-205d-4270-9f84-e4441cd93094",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "359c9240-fa7e-4865-bb25-44426fefc444",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "95810c69-3b57-4ef4-9899-888ce61c9487",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "D-Pad",
                    "id": "e9c29c5b-975f-4564-b586-e75cdbc7f5d4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "0fd37336-bb9b-489e-b760-5d516d230bcd",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "719f7720-e170-4b91-a1eb-0bcb01484656",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Joystick",
                    "id": "fece3dfc-45c3-4c7c-8c49-c3641d4b4b39",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "9772fba6-c3f7-4bbd-a869-e9ba31a3a280",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b4111f9c-cc90-4754-8f38-8b7f97611896",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5ac8db82-0be3-4d4a-bbcf-ee3c1d867490",
                    "path": "<Keyboard>/shift",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SprintStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b2949dd-ca95-4c83-ade3-752ee4032ad1",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "SprintStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd8c0862-8229-41c5-ac29-a307b2673593",
                    "path": "<Keyboard>/shift",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SprintEnd",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2c1e3c5-8057-4015-a840-fb77bf454b04",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "SprintEnd",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9e8e4d3-57aa-4069-b2d4-f172c2b86fab",
                    "path": "<Keyboard>/space",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "JumpEnd",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a55362f4-8a29-472d-8fd6-518d8dd95264",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "JumpEnd",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e8059df-ca94-4d66-bcec-31db0654cb5a",
                    "path": "<Keyboard>/s",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "CrouchStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9f0495d-55ea-4745-871a-26546e54e807",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "CrouchStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50cfdbb9-a7ca-4dbf-83ac-6dc5484cb20b",
                    "path": "<Keyboard>/s",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "CrouchEnd",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "880f7824-b76c-40d3-9d7e-2449ebfdde90",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "CrouchEnd",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dcf521fe-6347-4571-950f-35b442333504",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LightPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4060e1f-10be-4ff8-b462-2d999256bb43",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "LightPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9f16a0a-4aa1-48c4-b80e-8bfa270e3efd",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b6104fe-6478-451f-ba8a-a964a9dff6d9",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "HeavyPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ceca4902-f86d-4663-8e1c-7f9779305587",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "HeavyPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5548c94d-bce4-4066-a371-302e5352de92",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa38bbbb-e727-4ab3-83c5-d3e160bc782b",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Kick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "252e636f-51a2-4e9a-82c1-05272fce2930",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Kick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab317875-3ae9-43aa-af84-6e2ef2315e4b",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3853897c-23f7-4604-bbe2-f2f1201a0467",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}